--- a/assets/scss/scrimba.scss
+++ b/assets/scss/scrimba.scss
@@ -1,17 +1,78 @@
 html, body {
+  //margin: 10px;
+  //height: 100%;
   background-color: #ffeead;
-  margin: 10px;
 }
 
 .container {
+  //height: 100%;
   display: flex;
+  //margin: 0 auto;
+  //align-items: flex-end;
+  //flex-direction: row;
+  //flex-direction: column;
   border: 5px solid #FFCC5C;
+  //justify-content: center;
+  //justify-content: flex-end;
+  flex-wrap: wrap;
+  justify-content: center;
 
+  > div > img {
+    //width: 100%;
+    //height: 100%;
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+  }
+
+  > .normal {
+    //flex: 1 1 150px;
+  }
+
+  > .big {
+    //flex: 1 1 200px;
+  }
+
+  .home {
+    //align-self: flex-end;
+    //flex: 1 1 200px;
+  }
+
+  .search {
+    flex: 1;
+  }
+
+  .logout {
+    //flex: 10 1 200px;
+    //align-self: flex-start;
+  }
+
+  .item {
+    &1 {
+      order: 1;
+    }
+
+    &2 {
+      order: 0;
+    }
+
+    &3 {
+      order: 2;
+    }
+  }
+
+
+  /*
   > div {
+    //flex: 1;
     padding: 10px;
     font-size: 2em;
     color: #ffeead;
     text-align: center;
+
+    &:not(.search) {
+      //flex: 1;
+    }
 
     &:nth-child(1) {
       background-color: #96ceb4;
@@ -24,6 +85,11 @@ html, body {
     &:nth-child(3) {
       background-color: #88d8b0;
     }
+
+    &:nth-child(4) {
+      background-color: #ff6f69;
+    }
   }
+  */
 }
 
